// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ExpensesSummary /> renders more than one expense correctly 1`] = `
<div>
  <h2>
    Viewing 
    4
     expense
    s
     totalling 
    $0.05
  </h2>
</div>
`;

exports[`<ExpensesSummary /> renders one expense correctly 1`] = `
<div>
  <h2>
    Viewing 
    1
     expense
     totalling 
    $0.12
  </h2>
</div>
`;
